<resources>
    <string name="app_name">Pages</string>
    <string name="description_book_cover">Book cover</string>
    <string name="description_filters_applied_indicator">Filters applied indicator</string>
    <string name="description_pages_logo">Pages logo</string>
    <string name="description_remove_cover">Remove cover</string>
    <string name="description_reset_search">Reset search</string>
    <string name="description_statistics">Statistics</string>
    <string name="description_view_more">View more</string>
    <string name="expandable_text_view_show_less">show less</string>
    <string name="expandable_text_view_show_more">show more</string>
    <string name="hint_add_authors">Add authors…</string>
    <string name="ic_description_back">Navigate back</string>
    <string name="invalid_barcode">Scanned ISBN\n%s\nwas not found.</string>
    <string name="label_about">About</string>
    <string name="label_add_cover">Add cover…</string>
    <string name="label_add_manually">Add manually</string>
    <string name="label_add_to_shelf">Add to shelf</string>
    <string name="label_add_to_wishlist">Add to wishlist</string>
    <string name="label_all_time">All time</string>
    <string name="label_apply">Apply</string>
    <string name="label_ascending">Ascending</string>
    <string name="label_author">Author</string>
    <string name="label_authors">Author(s)</string>
    <string name="label_backup">Backup</string>
    <string name="label_backup_file_created">Backup file created!</string>
    <string name="label_backup_hint">Exports all your data into a file.</string>
    <string name="label_backup_imported">Backup file imported!</string>
    <string name="label_backup_not_imported">"Backup not successful.\nCheck the file and try again."</string>
    <string name="label_backup_restore">Backup / Restore</string>
    <string name="label_book_format_digital">Digital</string>
    <string name="label_book_format_hardback">Hardback</string>
    <string name="label_book_format_paperback">Paperback</string>
    <string name="label_books">Books</string>
    <string name="label_books_by_author">Books by author</string>
    <string name="label_books_by_rating">Books by ⭐ rating</string>
    <string name="label_books_read">Books you\'ve read</string>
    <string name="label_books_read_in_selected_period">Books read in selected period</string>
    <string name="label_bookshelf_already_exists">Bookshelf \"%s\" already exists!</string>
    <string name="label_borrowed">Borrowed</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_choose_a_bookshelf">Choose bookshelf</string>
    <string name="label_choose_another_name">Choose another name</string>
    <string name="label_choose_bookshelf_name">Choose a name for your\nnew bookshelf!</string>
    <string name="label_clear">Clear</string>
    <string name="label_comments">Comments</string>
    <string name="label_confirm">Confirm</string>
    <string name="label_contact_us">Contact</string>
    <string name="label_contact_us_description">Want to talk with the developer?\nFeel free to send an email!\nYou can also join our community on\nPage\'s official subreddit!</string>
    <string name="label_could_not_add_duplicate">Could not add\nduplicate</string>
    <string name="label_cover">Cover:</string>
    <string name="label_create">Create</string>
    <string name="label_create_backup_error">Sorry, there was an error creating your backup file.</string>
    <string name="label_delete_book">Delete book?</string>
    <string name="label_descending">Descending</string>
    <string name="label_description">Description</string>
    <string name="label_done_reading">Done reading</string>
    <string name="label_empty_wishlist_text">Remember that book you want so much?\nAdd it to your wishlist so you\nwon\'t forget to buy it later!</string>
    <string name="label_english">English</string>
    <string name="label_error">Error</string>
    <string name="label_error_reading_backup_file">Sorry, there was an error importing your backup file.</string>
    <string name="label_exit_confirmation">Press BACK again to exit.</string>
    <string name="label_filter_by">Filter by</string>
    <string name="label_finished_reading_on">Finished reading on</string>
    <string name="label_first_search">Looking for a book?\nJust type your search on the field above!</string>
    <string name="label_format">Format</string>
    <string name="label_format_number_of_pages">Number of pages</string>
    <string name="label_format_percentage">Percentage</string>
    <string name="label_from">From</string>
    <string name="label_general">General</string>
    <string name="label_get_in_touch">Get in touch!</string>
    <string name="label_google_books_connection_failed">Failed to reach Google Books API.\nCheck you internet connection.</string>
    <string name="label_google_play">Google Play</string>
    <string name="label_how_does_it_work">How does it work?</string>
    <string name="label_how_does_it_work_content">Pages is powered by Google Books API, which ensures a huge information database is always available.</string>
    <string name="label_import_file_warning_description">Importing a backup file will\noverride all your data.\nDo you wish to continue?</string>
    <string name="label_in_format">(in %s</string>
    <string name="label_info">Info</string>
    <string name="label_invalid_value_field">Field %s has an invalid value.\nPlease change it and try again.</string>
    <string name="label_invalid_values">Invalid values</string>
    <string name="label_isbn">ISBN</string>
    <string name="label_join_subreddit">Join our community on reddit.com/r/pages_app ! 😃</string>
    <string name="label_language">Language</string>
    <string name="label_last_backup_on">Last backup created on %s</string>
    <string name="label_lease">Lease</string>
    <string name="label_lent">Lent</string>
    <string name="label_monthly">Monthly</string>
    <string name="label_name">Name</string>
    <string name="label_new">New</string>
    <string name="label_new_book">New book</string>
    <string name="label_new_bookshelf">New bookshelf</string>
    <string name="label_no_books_found">(no books found)</string>
    <string name="label_no_books_placeholder">Looks like you haven\'t\nsaved any books yet.\nTry adding some! :)</string>
    <string name="label_no_cancel">No, cancel</string>
    <string name="label_no_data_available">No data available.</string>
    <string name="label_no_data_to_backup">No data to backup.</string>
    <string name="label_no_wishlist_results">We couldn\'t find anything\nthat matches your search query.\nPlease try again!</string>
    <string name="label_none">None</string>
    <string name="label_not_a_lease">It\'s mine</string>
    <string name="label_not_found">Not Found</string>
    <string name="label_not_informed">Not informed</string>
    <string name="label_notes">Notes</string>
    <string name="label_number_of_pages">Number of pages</string>
    <string name="label_of">of…</string>
    <string name="label_ok">OK</string>
    <string name="label_on">on</string>
    <string name="label_order_by">Order by</string>
    <string name="label_others">Others</string>
    <string name="label_pages_read">Pages read</string>
    <string name="label_pages_read_in_selected_period">Pages read in selected period</string>
    <string name="label_parenthesis_close" translatable="false">)</string>
    <string name="label_permission_not_granted">Permission not granted</string>
    <string name="label_portuguese">Portuguese</string>
    <string name="label_powered_by_google">Powered by Google</string>
    <string name="label_published_date">Published Date</string>
    <string name="label_publisher">Publisher</string>
    <string name="label_rate">Rate</string>
    <string name="label_rating">Rating</string>
    <string name="label_read">Read</string>
    <string name="label_required">Required</string>
    <string name="label_reset">Reset</string>
    <string name="label_restore">Restore</string>
    <string name="label_restore_hint">Restores your data from a\npreviously saved backup file.</string>
    <string name="label_save">Save</string>
    <string name="label_scan_barcode">Scan barcode</string>
    <string name="label_search">Search</string>
    <string name="label_search_books">Search books</string>
    <string name="label_search_books_ellipsis">Search in your library…</string>
    <string name="label_search_by_keyword_or_isbn">Search by keyword or ISBN</string>
    <string name="label_search_filters">Search filters</string>
    <string name="label_search_results_not_found">We couldn\'t find anything… :(\nTry again with a different keyword!</string>
    <string name="label_search_wishlist">Search wishlist…</string>
    <string name="label_settings">Settings</string>
    <string name="label_share">Share</string>
    <string name="label_share_app">Share app</string>
    <string name="label_share_thanks">By sharing Pages, you are helping\nthe app to grow! If you also want to give\nfeedback, visit us on Google Play Store\nby touching on the button below.</string>
    <string name="label_show_reading_progress_in">Show reading progress in…</string>
    <string name="label_sort_by">Sort by</string>
    <string name="label_started_reading_on">Started reading on</string>
    <string name="label_stats">Stats</string>
    <string name="label_still_reading">Still reading</string>
    <string name="label_terms_and_conditions">Terms and Conditions</string>
    <string name="label_terms_and_conditions_download"><a href="https://1drv.ms/b/s!Av4jZVW8FJLh-wQ13iXSV1Qq3QyU">Touch here to download the file.</a></string>
    <string name="label_this_action_cannot_be_undone">This action cannot be undone.</string>
    <string name="label_title">Title</string>
    <string name="label_to">To</string>
    <string name="label_try_again">Try again</string>
    <string name="label_unread">Unread</string>
    <string name="label_until">until</string>
    <string name="label_value_percentage" translatable="false">/ %s %%</string>
    <string name="label_value_simple" translatable="false">/ %s</string>
    <string name="label_version" translatable="false">1.0.9-beta</string>
    <string name="label_view">View…</string>
    <string name="label_visit_subreddit">Visit subreddit</string>
    <string name="label_want_to_buy_book">Want to buy this book?\nHere are some useful links:</string>
    <string name="label_warning">Warning!</string>
    <string name="label_what_about_permissions">What about those permissions?</string>
    <string name="label_what_about_permissions_content">Pages needs the following permissions:\n\t• Internet connection, to reach Google Books;\n\t• Camera, to scan bar codes;\n\t• Storage, to backup and restore your data if you want it.\nAnd that\'s it! I value your privacy, so I\'ll always make sure to ask only for the necessary and also to update this description if I add something else.</string>
    <string name="label_what_is_it">What is it?</string>
    <string name="label_what_is_it_content">Pages is an Android application developed to allow users to manage their book collections. It provides an organized way to store the books, by letting users divide them into custom bookshelves.</string>
    <string name="label_where_can_i_find_you">Where can I find you?</string>
    <string name="label_who_creates_it">Who creates it?</string>
    <string name="label_who_creates_it_content">A Software Developer who created this application to demonstrate his skills with Android / Kotlin development in a cool, fun way which could impact your life positively! ❤</string>
    <string name="label_wishlist">Wishlist</string>
    <string name="label_write_email">Write e-mail</string>
    <string name="label_yearly">Yearly</string>
    <string name="label_yes_im_sure">Yes, I\'m sure</string>
</resources>